# KernelBench

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ALTERNATIVE_LLMS.md  BUGFIXES.md  BUGFIXES_SUMMARY.md  CLAUDE.md  DEBUG_SUMMARY.md  EVAL.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  KERNEL_SEARCH_README.md  LICENSE  QUICKSTART.md  README.md  agent.py  backend.py  benchmarking.ipynb  cleanup.sh  curl.sh  env.example  journal.py  journal2report.py  kernel_agent.py  kernel_config.yaml  kernel_interpreter.py  pyproject.toml  requirements.txt  run_kernel_search.py  run_kernel_search_simple.py  setup.py  test_integration.py  test_kernel_integration_edge_cases.py  test_unit_comprehensive.py  torch_test_cuda.py
KernelBench/: best_k_kernels_level1.json  best_k_kernels_level1_small.json  best_k_kernels_level2.json  best_k_kernels_level2_small.json  best_k_kernels_level3.json  eval_dataset.parquet  eval_dataset_autorule.parquet  eval_dataset_incorrect.parquet  eval_dataset_kevin.parquet  eval_dataset_level1.parquet  sft_dataset_best_16_eval.parquet  sft_dataset_best_16_train.parquet  sft_dataset_best_1_eval.parquet  sft_dataset_best_1_eval_with_reasoning.parquet  sft_dataset_best_1_train.parquet  sft_dataset_best_2_eval.parquet  sft_dataset_best_2_eval_with_reasoning.parquet  sft_dataset_best_2_train.parquet  sft_dataset_best_3_eval.parquet  sft_dataset_best_3_eval_with_reasoning.parquet  sft_dataset_best_3_train.parquet  sft_dataset_best_4_eval.parquet  sft_dataset_best_4_eval_with_reasoning.parquet  sft_dataset_best_4_train.parquet  sft_dataset_best_8_eval.parquet  sft_dataset_best_8_train.parquet  sft_dataset_eval.parquet  sft_dataset_eval_best_4.parquet  sft_dataset_eval_best_8.parquet  sft_dataset_train_best_4.parquet  sft_dataset_train_best_8.parquet  train_dataset.parquet  train_dataset_autorule.parquet  train_dataset_correct.parquet  train_dataset_kevin.parquet  train_dataset_level1.parquet  train_dataset_level2.parquet  train_dataset_small.parquet
autorule/: level1_100_0_comparative_analysis_kernels.json  level1_100_0_comparative_analysis_prompt.txt  level1_100_0_comparative_analysis_response.json  level1_100_0_comparative_analysis_response.txt  level1_100_0_rule_response.json  level1_100_0_rule_response.txt  level1_100_0_rules.json  level1_100_1_comparative_analysis_kernels.json  level1_100_1_comparative_analysis_prompt.txt  level1_100_1_comparative_analysis_response.json  level1_100_1_comparative_analysis_response.txt  level1_100_1_rule_response.json  level1_100_1_rule_response.txt  level1_100_1_rules.json  level1_10_0_comparative_analysis_kernels.json  level1_10_0_comparative_analysis_prompt.txt  level1_10_0_comparative_analysis_response.json  level1_10_0_comparative_analysis_response.txt  level1_10_0_rule_response.json  level1_10_0_rule_response.txt  level1_10_0_rules.json  level1_10_1_comparative_analysis_kernels.json  level1_10_1_comparative_analysis_prompt.txt  level1_10_1_comparative_analysis_response.json  level1_10_1_comparative_analysis_response.txt  level1_10_1_rule_response.json  level1_10_1_rule_response.txt  level1_10_1_rules.json  level1_11_0_comparative_analysis_kernels.json  level1_11_0_comparative_analysis_prompt.txt  level1_11_0_rule_response.json  (+2554 more)
(+416 files in other folders)
