[project]
name = "kernelbench"
version = "0.1.0"
description = "Benchmarking Cuda/Triton Kernels made easy"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "anthropic>=0.34.2",
    "archon-ai>=0.1.4",
    "datasets>=3.5.0",
    "einops>=0.8.1",
    "google-generativeai>=0.8.4",
    "modal>=0.73.136",
    "ninja>=1.11.1.4",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "packaging>=24.2",
    "pydra-config>=0.0.14",
    "pytest>=8.3.5",
    "together>=1.5.4",
    "torch==2.5.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
]


   [tool.setuptools]
   package-dir = {"" = "src"}
   packages = ["kernelbench"]

[project.optional-dependencies]
dev = [
    "weave>=0.51.39",
    "black>=24.2.0",
    "ruff>=0.2.2",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | KernelBench
  | results
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "W", "B", "C4", "N"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "dist",
    "build",
    "KernelBench",
    "results",
]

[tool.ruff.isort]
known-first-party = ["kernelbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
